# gsoop

./: .gitmodules  CMakeLists.txt  Doxyfile  GSEngineLib.pro  GSEngineLib_global.h  LICENSE  MANIFEST.in  README.md  binding.gyp  bindings.js  gauss.i  gausscarrays.i  ge.i  gert.i  gsoop.pri  index.js  package.json  setup.py
doc/html/: annotated.html  annotated.js  annotated_dup.js  class_char_input-members.html  class_char_input.html  class_char_input.js  class_char_input__inherit__graph.map  class_char_input__inherit__graph.md5  class_double_double_vector-members.html  class_double_double_vector.html  class_double_double_vector.js  class_double_vector-members.html  class_double_vector.html  class_double_vector.js  class_float_vector-members.html  class_float_vector.html  class_float_vector.js  class_g_a_u_s_s-members.html  class_g_a_u_s_s.html  class_g_a_u_s_s.js  class_g_a_u_s_s__coll__graph.map  class_g_a_u_s_s__coll__graph.md5  class_g_a_u_s_s_private-members.html  class_g_a_u_s_s_private.html  class_g_a_u_s_s_private.js  class_g_e_array-members.html  class_g_e_array.html  class_g_e_array.js  class_g_e_array__inherit__graph.map  class_g_e_array__inherit__graph.md5  class_g_e_matrix-members.html  class_g_e_matrix.html  class_g_e_matrix.js  class_g_e_matrix__coll__graph.map  class_g_e_matrix__inherit__graph.map  class_g_e_matrix__inherit__graph.md5  class_g_e_string-members.html  class_g_e_string.html  class_g_e_string.js  class_g_e_string__coll__graph.map  (+598 more)
doc/html/search/: all_0.js  all_5.js  all_5f.html  all_6.js  all_61.html  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_67.html  all_67.js  all_69.html  all_69.js  all_6b.html  all_6b.js  all_6c.html  all_6d.html  all_6d.js  all_6e.html  all_6f.html  all_6f.js  all_70.html  all_70.js  all_73.html  all_73.js  all_74.html  all_74.js  all_75.html  all_75.js  all_76.html  all_77.html  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+88 more)
doc/latex/: annotated.tex  class_char_input.tex  class_char_input__inherit__graph.md5  class_double_double_vector.tex  class_double_vector.tex  class_float_vector.tex  class_g_a_u_s_s.tex  class_g_a_u_s_s__coll__graph.md5  class_g_a_u_s_s_private.tex  class_g_e_array.tex  class_g_e_array__inherit__graph.md5  class_g_e_matrix.tex  class_g_e_matrix__inherit__graph.md5  class_g_e_string.tex  class_g_e_string__coll__graph.md5  class_g_e_string_array.tex  class_g_e_string_array__coll__graph.md5  class_g_e_string_array__inherit__graph.md5  class_g_e_sym_type.tex  class_g_e_symbol.tex  class_g_e_symbol__inherit__graph.md5  class_g_e_workspace.tex  class_i_g_e_program_flush_output.tex  class_i_g_e_program_flush_output__inherit__graph.md5  class_i_g_e_program_input_char.tex  class_i_g_e_program_input_char__inherit__graph.md5  class_i_g_e_program_input_check.tex  class_i_g_e_program_input_check__inherit__graph.md5  class_i_g_e_program_input_string.tex  class_i_g_e_program_input_string__inherit__graph.md5  class_i_g_e_program_output.tex  class_i_g_e_program_output__inherit__graph.md5  class_int_vector.tex  class_output.tex  class_output__inherit__graph.md5  class_string_input.tex  class_string_input__inherit__graph.md5  class_string_string_vector.tex  class_string_vector.tex  class_swig_director___i_g_e_program_flush_output.tex  (+170 more)
docs/html/: annotated.html  class_g_a_u_s_s-members.html  class_g_a_u_s_s.html  class_g_a_u_s_s.js  class_g_a_u_s_s_private-members.html  class_g_a_u_s_s_private.html  class_g_e_array-members.html  class_g_e_array.html  class_g_e_array.js  class_g_e_array__inherit__graph.map  class_g_e_matrix-members.html  class_g_e_matrix.html  class_g_e_matrix.js  class_g_e_matrix__inherit__graph.md5  class_g_e_string_array-members.html  class_g_e_string_array.html  class_g_e_string_array.js  class_g_e_string_array__inherit__graph.map  class_g_e_symbol-members.html  class_g_e_symbol.html  class_g_e_symbol.js  class_g_e_workspace-members.html  class_g_e_workspace.html  class_g_e_workspace.js  class_i_g_e_program_flush_output-members.html  class_i_g_e_program_flush_output.html  class_i_g_e_program_input_char-members.html  class_i_g_e_program_input_char.html  class_i_g_e_program_input_check-members.html  class_i_g_e_program_input_check.html  class_i_g_e_program_input_string-members.html  class_i_g_e_program_input_string.html  class_i_g_e_program_input_string.js  class_i_g_e_program_output-members.html  class_i_g_e_program_output.html  class_i_g_e_program_output.js  class_workspace_manager-members.html  class_workspace_manager.html  class_workspace_manager.js  classdouble_array-members.html  (+31 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  variables_0.js  variables_2.js  variables_4.js
include/: mteng.h
node/: binding.gyp  gauss_wrap.cpp  index.js  package.json
php/: gauss.php  gauss_wrap.cpp  gauss_wrap.h  php_gauss.h  template_example.php  unit_test.php
php/php5/: gauss_wrap.cpp  gauss_wrap.h  ge.php  php_ge.h
php/php7/: gauss_wrap.cpp  gauss_wrap.h  php_ge.h
python/: gauss.py  gauss_wrap.cpp  gauss_wrap.h  minimal_example.py  template_example.py  unit_test.py
src/: gauss.cpp  gauss.h  gauss_p.h  gearray.cpp  gearray.h  gefuncwrapper.h  gematrix.cpp  gematrix.h  gestring.cpp  gestring.h  gestringarray.cpp  gestringarray.h  gesymbol.cpp  gesymbol.h  gesymtype.cpp  gesymtype.h  geworkspace.cpp  geworkspace.h  php_gauss.h  workspacemanager.cpp  workspacemanager.h
